add data, add models folder, add exploratory-nbs

--- a/exploratory-notebooks/9_dgan_testing.ipynb
+++ b/exploratory-notebooks/9_dgan_testing.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "model = DGAN(config)\n",
     "\n",
-    "model = model.load(\"dgan_model_1.pt\", map_location=torch.device('cpu'))"
+    "model = model.load(\"../models/dgan_model_1.pt\", map_location=torch.device('cpu'))"
    ]
   },
   {
