update full-slices to be 36hrs not 12

--- a/exploratory-notebooks/16_preprocess_48_sensors.ipynb
+++ b/exploratory-notebooks/16_preprocess_48_sensors.ipynb
@@ -5,7 +5,7 @@
    "id": "932d975c-be69-4d9e-82be-7e1f286a6dd9",
    "metadata": {},
    "source": [
-    "Slice Kaggle data found in sensor.csv into partitions that start 12 hours before each failure.  All columns are saved.\n",
+    "Slice Kaggle data found in sensor.csv into partitions that start 36 hours before each failure.  All columns are saved.\n",
     "These partitions are used to simulate real time data that is generated for model prediction.\n",
     "Code provided by Eli Guidera and modified for our needs in a notebook."
    ]
@@ -76,7 +76,7 @@
    "source": [
     "# Write the data slices to csv files\n",
     "for i, failure_time in enumerate(failure_times):\n",
-    "    df.loc[(failure_time - pd.Timedelta(seconds=60*60*12)) : failure_time, :].\\\n",
+    "    df.loc[(failure_time - pd.Timedelta(seconds=60*60*12*3)) : failure_time, :].\\\n",
     "        to_csv('../data/kagglePump/full_slice'+str(i)+'.csv')"
    ]
   },
