--- a/12_generate_sensor_data.ipynb
+++ b/12_generate_sensor_data.ipynb
@@ -16,88 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c4e826d-0bdd-4fcf-80ac-1f5e9aa93515",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: torch==1.11.0 in /opt/app-root/lib/python3.8/site-packages (1.11.0)\n",
-      "Requirement already satisfied: typing-extensions in /opt/app-root/lib/python3.8/site-packages (from torch==1.11.0) (4.0.1)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the '/opt/app-root/bin/python3.8 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0mCollecting git+https://github.com/gretelai/gretel-synthetics.git\n",
-      "  Cloning https://github.com/gretelai/gretel-synthetics.git to /tmp/pip-req-build-w3s16ibv\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/gretelai/gretel-synthetics.git /tmp/pip-req-build-w3s16ibv\n",
-      "  Resolved https://github.com/gretelai/gretel-synthetics.git to commit 2ed9d31ce8f56afd1519c38859ab081e8cdef579\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: loky==2.9.0 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (2.9.0)\n",
-      "Requirement already satisfied: numpy>=1.18.0 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (1.20.0)\n",
-      "Requirement already satisfied: pandas>=1.1.0 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (1.2.4)\n",
-      "Requirement already satisfied: sentencepiece==0.1.96 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (0.1.96)\n",
-      "Requirement already satisfied: smart_open<6.0,>=2.1.0 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (5.2.1)\n",
-      "Requirement already satisfied: tensorflow_privacy==0.7.3 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (0.7.3)\n",
-      "Requirement already satisfied: tensorflow_probability==0.16.0 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (0.16.0)\n",
-      "Requirement already satisfied: tqdm<5.0 in /opt/app-root/lib/python3.8/site-packages (from gretel-synthetics==0.18.1) (4.62.3)\n",
-      "Requirement already satisfied: cloudpickle in /opt/app-root/lib/python3.8/site-packages (from loky==2.9.0->gretel-synthetics==0.18.1) (1.5.0)\n",
-      "Requirement already satisfied: dm-tree~=0.1.1 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (0.1.7)\n",
-      "Requirement already satisfied: tensorflow-datasets>=4.4.0 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (4.6.0)\n",
-      "Requirement already satisfied: tensorflow-estimator>=2.3.0 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (2.7.0)\n",
-      "Requirement already satisfied: attrs>=21.2.0 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (21.4.0)\n",
-      "Requirement already satisfied: mpmath in /opt/app-root/lib/python3.8/site-packages (from tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (1.2.1)\n",
-      "Requirement already satisfied: scipy>=0.17 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (1.6.2)\n",
-      "Requirement already satisfied: six>=1.10.0 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_probability==0.16.0->gretel-synthetics==0.18.1) (1.16.0)\n",
-      "Requirement already satisfied: gast>=0.3.2 in /opt/app-root/lib/python3.8/site-packages (from tensorflow_probability==0.16.0->gretel-synthetics==0.18.1) (0.4.0)\n",
-      "Requirement already satisfied: absl-py in /opt/app-root/lib/python3.8/site-packages (from tensorflow_probability==0.16.0->gretel-synthetics==0.18.1) (1.0.0)\n",
-      "Requirement already satisfied: decorator in /opt/app-root/lib/python3.8/site-packages (from tensorflow_probability==0.16.0->gretel-synthetics==0.18.1) (5.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/app-root/lib/python3.8/site-packages (from pandas>=1.1.0->gretel-synthetics==0.18.1) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/app-root/lib/python3.8/site-packages (from pandas>=1.1.0->gretel-synthetics==0.18.1) (2021.3)\n",
-      "Requirement already satisfied: tensorflow-metadata in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (1.10.0)\n",
-      "Requirement already satisfied: importlib-resources in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (5.4.0)\n",
-      "Requirement already satisfied: termcolor in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (1.1.0)\n",
-      "Requirement already satisfied: etils[epath] in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (0.7.1)\n",
-      "Requirement already satisfied: promise in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (2.3)\n",
-      "Requirement already satisfied: requests>=2.19.0 in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (2.27.1)\n",
-      "Requirement already satisfied: toml in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (0.10.2)\n",
-      "Requirement already satisfied: protobuf>=3.12.2 in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (3.19.3)\n",
-      "Requirement already satisfied: dill in /opt/app-root/lib/python3.8/site-packages (from tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (0.3.4)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/app-root/lib/python3.8/site-packages (from requests>=2.19.0->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (2.0.10)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/app-root/lib/python3.8/site-packages (from requests>=2.19.0->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (1.26.8)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/app-root/lib/python3.8/site-packages (from requests>=2.19.0->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/app-root/lib/python3.8/site-packages (from requests>=2.19.0->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (2021.10.8)\n",
-      "Requirement already satisfied: typing_extensions in /opt/app-root/lib/python3.8/site-packages (from etils[epath]->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (4.0.1)\n",
-      "Requirement already satisfied: zipp in /opt/app-root/lib/python3.8/site-packages (from etils[epath]->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (3.7.0)\n",
-      "Requirement already satisfied: googleapis-common-protos<2,>=1.52.0 in /opt/app-root/lib/python3.8/site-packages (from tensorflow-metadata->tensorflow-datasets>=4.4.0->tensorflow_privacy==0.7.3->gretel-synthetics==0.18.1) (1.54.0)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the '/opt/app-root/bin/python3.8 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: numpy==1.20.0 in /opt/app-root/lib/python3.8/site-packages (1.20.0)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the '/opt/app-root/bin/python3.8 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first, pip installs to ensure we have the correct packages\n",
     "\n",
     "!pip install torch==1.11.0  # version recommended by source\n",
     "!pip install git+https://github.com/gretelai/gretel-synthetics.git\n",
     "!pip install numpy==1.20.0  # for new concatenate feature\n",
-    "!pip install kafka==2.0.2"
+    "!pip install kafka-python==2.0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6aab8d72-2035-486f-8b76-c7a49b85e0f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROUP_ID = None"
+    "GROUP_ID = 1111"
    ]
   },
   {
