revert to gretel synthetics v 0.19.0

--- a/12_generate_sensor_data.ipynb
+++ b/12_generate_sensor_data.ipynb
@@ -26,7 +26,8 @@
     "# first, pip installs to ensure we have the correct packages\n",
     "\n",
     "!pip install torch==1.11.0  # version recommended by source\n",
-    "!pip install git+https://github.com/gretelai/gretel-synthetics.git\n",
+    "#!pip install git+https://github.com/gretelai/gretel-synthetics.git\n",
+    "!pip install -U gretel-synthetics==0.19.0\n",
     "!pip install numpy==1.20.0  # for new concatenate feature\n",
     "!pip install kafka-python==2.0.2"
    ]
